[package]
name = "nano-app-starknet"
version = "0.1.0"
edition = "2021"
authors = ["yogh333"]

[dependencies]
nanos_sdk = { git = "https://github.com/yogh333/ledger-nanos-sdk.git", branch = "ecc-pubkey-getter" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z' 
lto = true

[package.metadata.nanos]
curve = "stark256"
path = "m/2645'/1195502025'/1148870696'/0'/0'/0"
flags = "0"
icon = "crab.gif"
